# yorgey-course

./: .gitignore  yorgey-course-solutions.cabal
src/Yorgey/: Intro.hs  Wk3Golf.hs
src/Yorgey/Wk2/: Log.hs  LogAnalysis.hs
week-1/: 01-intro-hw.hs
week-2/: LogAnalysis.hs
