name:                yorgey-course-solutions
version:             0.1.0.0
synopsis:            Solutions to programming exercises
description:         Source code for solutions for Brent Yorgey's Haskell Course
license:             GPL-3
license-file:        LICENSE
author:              Balaji Sivaraman <sivaraman.balaji@gmail.com>
maintainer:          Balaji Sivaraman
category:            Education
homepage:            https://github.com/balajisivaraman/yorgey-course
build-type:          Simple
cabal-version:       >=1.10

library
  default-language:    Haskell2010

  build-depends:       base >=4.7 && <4.8
                     , QuickCheck > 2.0
                     , doctest >= 0.9.11

  hs-source-dirs:      src

  exposed-modules:     Yorgey.Intro
                       Yorgey.Wk2.LogAnalysis
                       Yorgey.Wk3Golf
